# Finesse-Finance-Tracker-Qt

./: CMakeLists.txt  CMakeLists.txt.user.3f25453  Frontend - Shortcut.lnk  README.md
Backend/Model/: Expense.cpp  Expense.h  calendar.cpp  calendar.h  calendar_bridge.cpp  calendar_bridge.h  dashboard.cpp  dashboard.h  dashboardbridge.cpp  dashboardbridge.h  dashboardcontroller.cpp  dashboardcontroller.h  day.cpp  day.h  main.cpp  paymentsmanager.cpp  paymentsmanager.h  pie.cpp  pie.h  report.cpp  report.h  supabaseauth.cpp  supabaseauth.h  supabaseclient.cpp  supabaseclient.h  user.cpp  user.h
Frontend/finesse/: CMakeLists.txt  Main.qml  main.cpp
Frontend/finesse/pages/: Calendar.qml  LandingPage.qml  LoginPage.qml  Payments.qml  ProfilePage.qml  Summary.qml
Frontend/finesse/pages/components/: Header.qml  NavBar.qml
